--- a/kartta/index.html
+++ b/kartta/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="content-language" content="fi" />
 <meta name="description" value="Stadin hyddat ennen ja nyt" />
 <meta name="keywords" value="Helsinki, Stadi, hyppyri, mäki, mäkihyppy. hynda, hydda, hyndä, hyddä, talvi, urheilu, mäkihyppäjä, kaupunki" />
- <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <link rel="stylesheet" href="tyyli.css" />
 <!--[if lte IE 8]>
 <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
@@ -19,7 +19,7 @@
 <font size "1">Pauli Saloranta, Kari J. Nyberg, Harri Nygrén 2013-2020</font>
 </header>
   <div id="map"></div>
-   <script src="https://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
  <script>
   // OSM
  var osm = L.tileLayer('https://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
