--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Hertsikassa on nyt Stadin viimeiset hyddat. <a href="https://sites.google.com/vi
 K15, K22 ja K46 veteraanivoimin. 
 </p>
 
-<p>Paikansimme Stadin hyddia vuonna 2013 <a href="https://www.skr.fi/fi/rahastot/uudenmaan-rahasto/" target="_blank">Uudenmaan Kulttuurirahaston</a> tuella ja 
+<p>Paikansimme Stadin hyddia vuonna 2013 <a href="https://skr.fi/tietoa-meista/maakuntarahastot/uusimaa/" target="_blank">Uudenmaan Kulttuurirahaston</a> tuella ja 
 <a href="https://www.urheilumuseo.fi/" target="_blank">Suomen Urheilumuseon</a> avulla.<br> 
 Kiitos tiedoista myös Helsingin kaupunginmuseolle, Espoon kaupungin nimistötoimelle,
  entisille mäkimiehille ja lukuisille yksityisille kaupunginosa-aktiiveille.
