--- a/taivari/index.html
+++ b/taivari/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
@@ -28,7 +29,7 @@
       <img src="1.jpg" alt="...">
       <div class="carousel-caption">
 		<span class="tekstin-tausta">
-			Taivarin hyddan yl‰m‰ki Suojeluskunnan historiikissa 
+			Taivarin hyddan yl√§m√§ki Suojeluskunnan historiikissa 
 		</span>
       </div>
     </div>
@@ -55,7 +56,7 @@
       <img src="4.jpg" alt="...">
       <div class="carousel-caption">
 	  		<span class="tekstin-tausta">
-        Taivaskallion hyppyrim‰en alarinne erottuu Helsingin kaupungin karttapalvelun vuoden 1932 ortokuvassa.
+        Taivaskallion hyppyrim√§en alarinne erottuu Helsingin kaupungin karttapalvelun vuoden 1932 ortokuvassa.
 			</span>
       </div>
     </div>
@@ -75,25 +76,25 @@
 
 	<div id="text">
 	<p>
-Taivaskallion hyppyrim‰en historia on lyhyt ja v‰h‰n tunnettu. 
-Jo vuonna 1922 K‰pyl‰n urheilijat haki kaupungilta lupaa hyppyrim‰en pystytt‰miseen Taivaskalliolle.
-Tarkastettuaan paikan kaupungin urheilulautakunta totesi Taivaskallion sopimattomaksi hyppyrim‰en rakentamiseen.
+Taivaskallion hyppyrim√§en historia on lyhyt ja v√§h√§n tunnettu. 
+Jo vuonna 1922 K√§pyl√§n urheilijat haki kaupungilta lupaa hyppyrim√§en pystytt√§miseen Taivaskalliolle.
+Tarkastettuaan paikan kaupungin urheilulautakunta totesi Taivaskallion sopimattomaksi hyppyrim√§en rakentamiseen.
 <p> 
-Vuonna 1927 suksim‰ki kuitenkin Taivaskalliolle kohosi. Asialla olivat t‰ll‰ kertaa K‰pyl‰n kisailijat, K‰pyl‰n VPK ja K‰pyl‰n suojeluskunnan konekiv‰‰rikomppania, 
+Vuonna 1927 suksim√§ki kuitenkin Taivaskalliolle kohosi. Asialla olivat t√§ll√§ kertaa K√§pyl√§n kisailijat, K√§pyl√§n VPK ja K√§pyl√§n suojeluskunnan konekiv√§√§rikomppania, 
 joille kaupunki luovutti maksuttomasti tarvittavan alueen viideksi vuodeksi. 
-M‰ki rakennettiin talkoilla, puutyˆt teetettiin urakoitsijalla. 
+M√§ki rakennettiin talkoilla, puuty√∂t teetettiin urakoitsijalla. 
 Rakennustarpeet saatiin lahjoituksena Aallon ja Wuorion rakennusfirmoilta. 
-Taivaskalliolla, m‰en vieress‰ kahvilaa pit‰nyt neiti Bergroth lahjoitti kiertopalkinnon kilpailtavaksi.
+Taivaskalliolla, m√§en vieress√§ kahvilaa pit√§nyt neiti Bergroth lahjoitti kiertopalkinnon kilpailtavaksi.
 <p> 
-Lyhyeksi j‰i kuitenkin hyppyrim‰en historia Taivarilla. Kiertopalkinnosta ehdittiin kilpailla vain kerran v‰h‰lumisten talvien vuoksi. 
-Kev‰tkes‰ll‰ 1930 rajumyrsky kaatoi hyppyrim‰en yl‰m‰en ja alam‰en puuosat purettiin ja myytiin. 
+Lyhyeksi j√§i kuitenkin hyppyrim√§en historia Taivarilla. Kiertopalkinnosta ehdittiin kilpailla vain kerran v√§h√§lumisten talvien vuoksi. 
+Kev√§tkes√§ll√§ 1930 rajumyrsky kaatoi hyppyrim√§en yl√§m√§en ja alam√§en puuosat purettiin ja myytiin. 
 </p>
 <p>
 HN
 </p>
 <p>
-L‰hteet:<br>
-K‰pyl‰n suojeluskunta, 15-vuotisvaiheet, 1938<br>
+L√§hteet:<br>
+K√§pyl√§n suojeluskunta, 15-vuotisvaiheet, 1938<br>
 Helsingin kunnalliskertomukset<br>
 Suomen Kuvalehti 7.7.1928
 
