--- a/taivari/index.html
+++ b/taivari/index.html
@@ -86,8 +86,9 @@ Mäki rakennettiin talkoilla, puutyöt teetettiin urakoitsijalla.
 Rakennustarpeet saatiin lahjoituksena Aallon ja Wuorion rakennusfirmoilta. 
 Taivaskalliolla, mäen vieressä kahvilaa pitänyt neiti Bergroth lahjoitti kiertopalkinnon kilpailtavaksi.
 <p> 
-Lyhyeksi jäi kuitenkin hyppyrimäen historia Taivarilla. Kiertopalkinnosta ehdittiin kilpailla vain kerran vähälumisten talvien vuoksi. 
-Kevätkesällä 1930 rajumyrsky kaatoi hyppyrimäen ylämäen ja alamäen puuosat purettiin ja myytiin. 
+Lyhyeksi jäi kuitenkin hyppyrimäen historia Taivarilla. Kiertopalkinnosta ehdittiin kilpailla vain kerran vähälumisten talvien vuoksi. Vihkiäiskilpailu pidettiin 28.2.1928. Kisan voitti Helsingin Toverien U. Davidsson tuloksella 18.40 m.
+	
+14.12.1929 rajumyrsky kaatoi hyppyrimäen ylämäen ja alamäen puuosat purettiin ja myytiin. 
 </p>
 <p>
 HN
