--- a/taivari/index.html
+++ b/taivari/index.html
@@ -97,7 +97,9 @@ HN
 Lähteet:<br>
 Käpylän suojeluskunta, 15-vuotisvaiheet, 1938<br>
 Helsingin kunnalliskertomukset<br>
-Suomen Kuvalehti 7.7.1928
+Suomen Kuvalehti 7.7.1928<br>
+Kansalliskirjaston digitoidut aineistot<br>
+Pauli Heikkilä: Alppila, Herttoniemi ja töppyrät (2025)
 
 
 
