--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ L.marker([60.223698, 24.923349]).addTo(map).bindPopup('<a href="pekkari/pekkari.
 L.marker([60.19404, 24.895]).addTo(map).bindPopup('Meilahden vanha hydda K18 1933-55, Kuusitien mutkassa, <a href="meilahti_vanha/meilahti_vanha_hyppysuunta.jpg">hyppysuunta Munkkaan</a> päin. Ei rakenteita näkyvissä');
 
 // Meilahti uusi
-L.marker([60.1893, 24.8921]).addTo(map).bindPopup('Meilahden uusi hydda, K24. Rakennettu 1959. <a href="meilahti/meilahti_ylamaki.jpg">Ylämäen rakenteita</a>, <a href="meilahti/meilahti_alamaki.jpg">alamäki</a>.');
+L.marker([60.1893, 24.8921]).addTo(map).bindPopup('Meilahden uusi hydda, K24. Rakennettu 1959. Purettu 2010-luvun vaihteessa. <a href="meilahti/meilahti_ylamaki.jpg">Ylämäen rakenteita</a>, <a href="meilahti/meilahti_alamaki.jpg">alamäki</a>.');
 
 // Munkkivuori 12m
 L.marker([60.21049, 24.87609]).addTo(map).bindPopup('Munkkivuoren hynda Keilahallin takaisessa metsässä, K12. Putkirakenteinen, Lions Clubin vuonna 1959 rakennuttama mäki. <a href="munkkivuori/munkkivuori_avajaiset.pdf">Hesarin uutinen avajaisista</a> <a href="munkkivuori/munkkivuori_alamaki.jpg">Munkkivuoren hyppyrimäen alastulorinne v. 2013</a>');
@@ -145,7 +145,7 @@ L.marker([60.17636, 24.9539]).addTo(map).bindPopup('28.2.1892 järjestettiin mä
 L.marker([60.19327, 24.97466]).addTo(map).bindPopup('Sörnäisten olutpanimon hydda, "Prykin kukku" n. 1905. Tarkkaa sijaintia ei tiedetä');
 
 // Taivaskallio
-L.marker([60.22002, 24.95164]).addTo(map).bindPopup('<img src="taivari/1_thumb.jpg" class="bubble-image" alt="...">Taivaskallion hydda 1927&#150;30. Käpylän kisailijoiden, Käpylän VPK:n ja Suojeluskunnan rakennuttama mäki Taivaskallion luoteisrinteellä. <a href="taivari/"><br>Lue lisää</a>.');
+L.marker([60.22002, 24.95164]).addTo(map).bindPopup('<img src="taivari/1_thumb.jpg" class="bubble-image" alt="...">Taivaskallion hydda 1928&#150;29. Käpylän kisailijoiden, Käpylän VPK:n ja Suojeluskunnan rakennuttama mäki Taivaskallion luoteisrinteellä. <a href="taivari/"><br>Lue lisää</a>.');
 
 // Töölö
 L.marker([60.18792, 24.92478]).addTo(map).bindPopup('Pallokentän hydda. Harjoittelumäkiä on Pallokentän nurkalla ollut useampaan otteeseen. Ensimmäinen havainto on <a href="toolo/toolon_hyppyri.jpg">vuodelta 1915</a>. Tarkkaa sijaintia ei tiedetä. Jukka Joutsi kuvasi <a href="toolo/aave260.jpg">hyddan</a> Olympiastadionin nurkalla vuonna 1967.');
