Lisätty Jokikunta ja Salmi

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div id="container">
 <header> <a href="https://www.kotikaupunkipolut.fi"><img src="kartta/sinilogo.jpg" class="logo_v" title="Kotikaupunkipolut"></a> <a href="https://skr.fi/uu"><img src="kartta/uu-vihrea.gif" class="logo_o" title="Uudenmaan kulttuurirahasto"></a> <h1>Stadin hyddat ennen ja nyt</h1>
-<font size "1">Pauli Saloranta, Kari J. Nyberg, Harri Nygrén 2013-2020</font>
+<font size "1">Pauli Saloranta, Kari J. Nyberg, Harri Nygrén 2013-2025</font>
 </header>
   <div id="map"></div>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
@@ -77,9 +77,6 @@ L.marker([60.21109, 25.03387]).addTo(map).bindPopup('Herttoniemen uudet hyddat, 
 // Herttoniemi, vanha
 L.marker([60.20379, 25.0275]).addTo(map).bindPopup('Hertsikan vanha hydda Majavatien päässä, K50 1936&#150;76.  Mäkiennätys 52 m 7.3.1976 Joonas Myllyveräjä.<a href="hertsika/hertsika_ylamaki.jpg">Ylämäen betonijalustoja</a>, <a href="hertsika/hertsika_tuomaritorni.jpg">tuomaritornin jalustat</a>, <a href="hertsika/hertsika_alamaki.jpg">alastulorinne</a> ja <a href="hertsika/hertsika_portaat.jpg">portaat</a>. <a href="https://yle.fi/elavaarkisto/artikkelit/herttoniemen_hyppyrimaki_51419.html#media=51420">Mäkikisat Hertsikassa 1953</a>  ');
 
-// Hyryla
-L.marker([60.40209, 25.02183]).addTo(map).bindPopup('Hyrylän hyppyrimäki. Suojeluskunnan rakentama hyppyrimäki vuodelta 1938. Avajaiskisat pidettiin 16.3.1938. Myrsky kaatoi tornin 1950-luvun alussa. Mäkiennätys 33m. Alamäen paikka löytyy.<br> <a href="hyryla/hyrylan_hynda_40_l.jpg">Hyrylän mäki 1940-luvulla</a><br><a href="hyryla/hyrylan_alastulorinne_v2020.jpg">Hyrylän mäen alastulorinne v. 2020</a>');
-
 // Kaivopuisto
 L.marker([60.15506, 24.95543]).addTo(map).bindPopup('Kaivopuiston hydda, "pienoismäki" käytössä ainakin vuodesta 1937 1960-luvun lopulle. Hyppyri oli kivivallin päällä, hyppysuunta itään');
 
@@ -118,9 +115,6 @@ L.marker([60.21049, 24.87609]).addTo(map).bindPopup('Munkkivuoren hynda Keilahal
 
 // Oulunkylä
 L.marker([60.2285, 24.98471]).addTo(map).bindPopup('"Ogelin Norski", "Normansbacken", Pirunkalliolla Pikkukoskella, 1905 valmistunut luonnonmäki. 1910 mäkeä kunnostettiin ja rakennettiin 5 m. korkea lähtölava, K20. Ì·ggelby Idrottsklub järjesti uusitun mäen <a href="ogeli/invignig_af_skidbacken_5_2_1910.jpg">avajaiskilpailut 6.2.1910</a>. Lähtölava tuhoutui sisällissodan aikana. Mäki oli käytössä  vielä ainakin 1950- ja 1960-luvulla luonnonmäkenä. <a href="ogeli/ogelin_norski_25_10_2013.jpg">Alastulorinne</a> erottuu vielä helposti Pirunkallion itärinteeltä');
-
-// Parkkimäki, Nurmijärvi
-L.marker([60.470022, 24.795331]).addTo(map).bindPopup('"Parkkimäki, suojeluskunnan v. 1937 rakennuttama hyppyrimäki. Purettu 1970-luvulla? Mäkiennätys 39 m.<p><a href="parkkimaki/parkkimaki_1950-luvulla.jpg">Parkkimäki 1950-luvulla</a>, kuva: Jorma Koskenlaakso, Nurmijärven museon kuva-arkisto<p><a href="parkkimaki/parkkimaki_alastulorinne_2_2020.jpg">Lähes umpeen kasvanut alastulorinne v. 2020</a><p><a href="parkkimaki/parkkimaki_alastulorinne_2020.jpg">Alastulorinne alamäen halkaisevalta tieltä kuvattuna v. 2020</a><p><a href="parkkimaki/parkkimaki_betonipilarit_2020.jpg">Ylämäen betonipilareita v. 2020</a><p><a href="parkkimaki/parkkimaki_betonipilari_2020.jpg">Ylämäen betonipilarit on kuin veistoksia</a> ');
 
 // Pukinmäki
 L.marker([60.24593, 24.97913]).addTo(map).bindPopup('"Puksun Norski" Sinivuorella, Weisteen tehtaan vieressä, K13. Ennen sotia rakennettiin talkoilla ylämäki, myöhemmin luonnonmäkenä. Käytössä ainakin 1960-luvun alkupuolella. Ei mitään rakenteita nähtävissä. <a href="sinivuori/sinivuori_alamaki.jpg">Alamäki</a> erottuu vain jos tietää mäen paikan.<br> <a href="https://pukinmaki.fi/?option=com_content&view=article&id=376" target="_blank">Sinivuori Pukinmäen kotisivuilla</a>');
@@ -171,6 +165,24 @@ L.marker([60.29828, 24.55512]).addTo(map).bindPopup('<a href="solvalla/solvalla.
 // Tuomarila
 L.marker([60.19756, 24.69626]).addTo(map).bindPopup('Tuomarilan hydda 1947&#150;58');
 
+// Nurmijärvi
+
+// Hyryla
+L.marker([60.40209, 25.02183]).addTo(map).bindPopup('Hyrylän hyppyrimäki. Suojeluskunnan rakentama hyppyrimäki vuodelta 1938. Avajaiskisat pidettiin 16.3.1938. Myrsky kaatoi tornin 1950-luvun alussa. Mäkiennätys 33m. Alamäen paikka löytyy.<br> <a href="hyryla/hyrylan_hynda_40_l.jpg">Hyrylän mäki 1940-luvulla</a><br><a href="hyryla/hyrylan_alastulorinne_v2020.jpg">Hyrylän mäen alastulorinne v. 2020</a>');
+
+// Parkkimäki
+L.marker([60.470022, 24.795331]).addTo(map).bindPopup('"Parkkimäki, suojeluskunnan v. 1937 rakennuttama hyppyrimäki. Purettu 1970-luvulla? Mäkiennätys 39 m.<p><a href="parkkimaki/parkkimaki_1950-luvulla.jpg">Parkkimäki 1950-luvulla</a>, kuva: Jorma Koskenlaakso, Nurmijärven museon kuva-arkisto<p><a href="parkkimaki/parkkimaki_alastulorinne_2_2020.jpg">Lähes umpeen kasvanut alastulorinne v. 2020</a><p><a href="parkkimaki/parkkimaki_alastulorinne_2020.jpg">Alastulorinne alamäen halkaisevalta tieltä kuvattuna v. 2020</a><p><a href="parkkimaki/parkkimaki_betonipilarit_2020.jpg">Ylämäen betonipilareita v. 2020</a><p><a href="parkkimaki/parkkimaki_betonipilari_2020.jpg">Ylämäen betonipilarit on kuin veistoksia</a> ');
+
+//Vihti 
+
+//Jokikunta
+L.marker([60.429231,24.205076]).addTo(map).bindPopup('Jokikunnan hyppyrimäet,  Iso hyppyrimäki 1961 ja harjoitusmäki 1962. Mäen suunnittelija Toivo Leivo. Mäkiennätys 54 m, Veikko Kankkonen ja Simo Havukorpi. Mäet säilytetty muistomerkkeinä, käyttökiellossa (2025) &#150;58');
+
+
+//Salmi
+L.marker([60.380641,24.504325]).addTo(map).bindPopup('Salmen hyppyrimäki, rakennettu 1960-luvun alussa, rakentajana urheiluseura Härkälän Haka. Sijainti entisten laskettelurinteiden pohjoispuolela. Purettu, alastulorinteen muoto havaittavissa, ei säilyneitä rakenteita. &#150;58');
+
+	 
  </script>
  <div id="text">
  <p>Stadin mäkihyppy eli kulta-aikaansa 1950&#150;60-luvuilla. Kaupungin, urheiluseurojen ja yksityisten rakennuttamia hyndiä oli ympäri Helsinkiä.
