--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@ L.marker([60.470022, 24.795331]).addTo(map).bindPopup('"Parkkimäki, suojeluskun
 //Vihti 
 
 //Jokikunta
-L.marker([60.429231,24.205076]).addTo(map).bindPopup('Jokikunnan hyppyrimäet,  Iso hyppyrimäki 1961 ja harjoitusmäki 1962. Mäen suunnittelija Toivo Leivo. Mäkiennätys 54 m, Veikko Kankkonen ja Simo Havukorpi. Mäet säilytetty muistomerkkeinä, käyttökiellossa (2025) &#150;58');
+L.marker([60.429231,24.205076]).addTo(map).bindPopup('Jokikunnan hyppyrimäet,  Iso hyppyrimäki 1961 ja harjoitusmäki 1962. Mäen suunnittelija Toivo Leivo. Mäkiennätys 54 m, Veikko Kankkonen ja Simo Havukorpi. Mäet säilytetty muistomerkkeinä, käyttökiellossa (2025) ');
 
 
 //Salmi
-L.marker([60.380641,24.504325]).addTo(map).bindPopup('Salmen hyppyrimäki, rakennettu 1960-luvun alussa, rakentajana urheiluseura Härkälän Haka. Sijainti entisten laskettelurinteiden pohjoispuolela. Purettu, alastulorinteen muoto havaittavissa, ei säilyneitä rakenteita. &#150;58');
+L.marker([60.380641,24.504325]).addTo(map).bindPopup('Salmen hyppyrimäki, rakennettu 1960-luvun alussa, rakentajana urheiluseura Härkälän Haka. Sijainti entisten laskettelurinteiden pohjoispuolella. Purettu, alastulorinteen muoto havaittavissa, ei säilyneitä rakenteita. ');
 
 	 
  </script>
