--- a/index.html
+++ b/index.html
@@ -176,10 +176,9 @@ L.marker([60.470022, 24.795331]).addTo(map).bindPopup('"Parkkimäki, suojeluskun
 //Vihti 
 
 //Jokikunta
-L.marker([60.429231,24.205076]).addTo(map).bindPopup('Jokikunnan hyppyrimäet,  Iso hyppyrimäki 1961 ja harjoitusmäki 1962. Mäen suunnittelija Toivo Leivo. Mäkiennätys 54 m, Veikko Kankkonen ja Simo Havukorpi. Mäet säilytetty muistomerkkeinä, käyttökiellossa (2025) <br>
+L.marker([60.429231,24.205076]).addTo(map).bindPopup('Jokikunnan hyppyrimäet,  Iso hyppyrimäki 1961 ja harjoitusmäki 1962. Mäen suunnittelija Toivo Leivo. Mäkiennätys 54 m, Veikko Kankkonen ja Simo Havukorpi. Mäet säilytetty muistomerkkeinä, käyttökiellossa v. 2025 <br>
 <a href="jokikunta/20250319_130249.jpg">iso mäki v. 2025</a><br>
- <a href="jokikunta/20250319_130745.jpg">molemmat mäet v. 2025</a>
-');
+ <a href="jokikunta/20250319_130745.jpg">molemmat mäet v. 2025</a> ');
 
 
 //Salmi
