korjattu jokikunta, salmi

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ L.marker([60.429231,24.205076]).addTo(map).bindPopup('Jokikunnan hyppyrimäet,  
 
 
 //Salmi
-L.marker([60.380641,24.504325]).addTo(map).bindPopup('Salmen hyppyrimäki, rakennettu 1960-luvun alussa, rakentajana urheiluseura Härkälän Haka. Sijainti entisten laskettelurinteiden pohjoispuolella. Purettu, alastulorinteen muoto havaittavissa, ei säilyneitä rakenteita. ');
+L.marker([60.380641,24.504325]).addTo(map).bindPopup('Salmen hyppyrimäki, rakennettu 1960-luvun alussa, rakentajana urheiluseura Härkälän Haka. Sijainti entisten laskettelurinteiden pohjoispuolella. Purettu, <a href="salmi/20250318_163828.jpg">alastulorinteen muoto</a> havaittavissa, ei säilyneitä rakenteita. ');
 
 	 
  </script>
