lisätty linkki kuvaan ruskeasuo vanha

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ L.marker([60.201147, 25.051274]).addTo(map).bindPopup('Roihuvuoren hydda, K25. 1
 L.marker([60.198481, 24.918559]).addTo(map).bindPopup('Ruskeasuon hydda. Rakennettu 1959. Purettu 1970-luvun puolivälissä. Ylämäen betonirakenteita, hyppyri, <a href="ruskeasuo/ruskeasuo_alamaki.jpg">alastulorinne</a>.');
 
 // Ruskeasuo vanha
-L.marker([60.196769, 24.913948]).addTo(map).bindPopup('Ruskeasuon vanha hydda n. 1932 rakennettu Suojeluskunnan ylläpitämä mäki. Mäestä hypätty ainakin 13,5 m. <a href="ruskeasuo_vanha/">Kivestä rakennettu hyppyri</a> vielä löydettävissä ');
+L.marker([60.196769, 24.913948]).addTo(map).bindPopup('Ruskeasuon vanha hydda n. 1932 rakennettu Suojeluskunnan ylläpitämä mäki. Mäestä hypätty ainakin 13,5 m. <a href="ruskeasuo_vanha/20221608_154045.jpg">Kivestä rakennettu hyppyri</a> vielä löydettävissä ');
 
 // Siltavuori
 L.marker([60.17636, 24.9539]).addTo(map).bindPopup('28.2.1892 järjestettiin mäenlaskukilpailu Siltavuoren rannassa. Päivälehti kertoo hyppypaikasta näin: "Mäki laskeutui Siltawuorelta lähellä Pitkääsiltaa. Mäessä oli kaksi hyppyriä, joista toinen pudottautui laiwasillalta alas meren jäälle: ensimmäisen hyppyrin korkeus oli 8 ja toisen 5 jalkaa." Siltavuoren rannassa on vielä komeita <a href="siltavuori/siltavuoren_kalliot.jpg">kallioita</a>, tarkkaa hyppypaikkaa ei tiedetä.');
