päivitetty lauttasaaren tekstiä

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ L.marker([60.2053, 24.96002]).addTo(map).bindPopup('Kumpulan hydda. <a href="kum
 L.marker([60.214972, 24.941132]).addTo(map).bindPopup('<a href="tallinmaki/kapylan_hydda.jpg">Tallinmäen hydda</a> Käpylässä, K18. Rakennettu 1934. Purettu 1970-luvulla. Mäkiennätys 24,5 m. <a href="tallinmaki/tallinmaki_ylamaki.jpg">Ylämäen säilyneitä rakenteita</a>, <a href="tallinmaki/tallinmaki_alamaki.jpg">alamäki.');
 
 // Lauttasaari
-L.marker([60.163235, 24.863917]).addTo(map).bindPopup('<a href="lauttasaari/lauttasaari.jpg">Pyrkän hydda</a> K28 Lauttasaaressa 1960&#150;73. Mäkiennätys 29,5 m, Niilo Halonen. Ensimmäinen mäki K17 Lauttasaareen rakennettiin jo 1931.');
+L.marker([60.163235, 24.863917]).addTo(map).bindPopup('<a href="lauttasaari/lauttasaari.jpg">Pyrkän hydda</a> K28 Lauttasaaressa 1960&#150;73. Lauttasaaren Pyrinnön ylläpitämä hyppyrimäki, mäkiennätys 29,5 m, Niilo Halonen. Lauttasaaren mäki purettiin 25.10.1973.<br>Lauttasaaressa oli jo aiemmin suojeluskuntien ylläpitämä hyppyrimäki K17 vuodesta 1931.');
 
 // Maunula
 L.marker([60.223698, 24.923349]).addTo(map).bindPopup('<a href="pekkari/pekkari.jpg">Pekkarin hydda</a> K25, nykyisessä Maunulanpuistossa. Rakennettu 1956. Hyppytorni purettiin 1980-luvun puolivälissä. Mäkiennätys 26 m, Juhani Ormo, Kari Nyberg. <a href="pekkari/pekkari_alamaki.jpg">Pekkarin alastulorinne.</a> on turmeltu huoltotunnelin suuaukolla. <a href="pekkari/pekkari_hyppyri.jpg">Hyppyri</a> oli erityisen matala. <a href="pekkari/pekkari_ylamaki.jpg">Ylämäen rakenteita</a>. ');
