--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ L.marker([60.23478, 24.79258]).addTo(map).bindPopup('Monikon hyddat. Mäkiennät
 L.marker([60.29828, 24.55512]).addTo(map).bindPopup('<a href="solvalla/solvalla.pdf">Solvallan hydda</a>, K27');
 
 // Tuomarila
-L.marker([60.19756, 24.69626]).addTo(map).bindPopup('Tuomarilan hydda 1947&#150;58');
+L.marker([60.19756, 24.69626]).addTo(map).bindPopup('Tuomarilan hydda 1947&#150;58, Tuomarilan urheilijoiden mäki K 20, purettu');
 
 // Nurmijärvi
 
