päivitetty Tuomarila, Laajalahti

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ L.marker([60.19901, 24.95047]).addTo(map).bindPopup('Vallilan hydda, rakennettu 
 L.marker([60.11385, 24.71574]).addTo(map).bindPopup('<a href="bergo/Hoppbacken_Bergo.jpg">Bergön mäki Hoppbacksbergetillä</a>. Mäen rakensi  Skärgårdens Vänner i Esbo v. 1959. Mäki paloi 1960-luvun puolivälissä');
 
 // Laajalahti
-L.marker([60.20645, 24.79523]).addTo(map).bindPopup('Laajalahden Virin hydda Vahvialankalliolla, asukkaiden puheissa myös Himmelsberget, Taivaskallio ja Taivari. Samanniminen, tunnetumpi kallio löytyy Käpylästä. Hyppyrimäki rakennettu 1950-luvun alussa, purkuvuodesta ei tietoa.');
+L.marker([60.20645, 24.79523]).addTo(map).bindPopup('Laajalahden Virin hydda Vahvialankalliolla K20?, asukkaiden puheissa myös Himmelsberget, Taivaskallio ja Taivari. Samanniminen, tunnetumpi kallio löytyy Käpylästä. Hyppyrimäki rakennettu 1950-luvun alussa, purkuvuodesta ei tietoa.');
 
 // Monikko
 L.marker([60.23478, 24.79258]).addTo(map).bindPopup('Monikon hyddat. Mäkiennätys 47 metriä, Markku Maatela. Rakennettu 1960-1961, avajaiskilpailut 1962, purettu 1970-luvulla.');
@@ -163,7 +163,7 @@ L.marker([60.23478, 24.79258]).addTo(map).bindPopup('Monikon hyddat. Mäkiennät
 L.marker([60.29828, 24.55512]).addTo(map).bindPopup('<a href="solvalla/solvalla.pdf">Solvallan hydda</a>, K27');
 
 // Tuomarila
-L.marker([60.19756, 24.69626]).addTo(map).bindPopup('Tuomarilan hydda 1947&#150;58, Tuomarilan urheilijoiden mäki K 20, purettu');
+L.marker([60.19756, 24.69626]).addTo(map).bindPopup('Tuomarilan hydda 1947&#150;58, Tuomarilan urheilijoiden mäki K20?, purettu');
 
 // Nurmijärvi
 
