Replace JavaScript redirection with HTML meta refresh in index.html

--- a/kartta/index.html
+++ b/kartta/index.html
@@ -1,3 +1,6 @@
-<script>
-  document.location = ".."
-</script>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0;url=.." />
+  </head>
+<body></body>
+</html>
